--- a/Jirono/css/style.css
+++ b/Jirono/css/style.css
@@ -124,7 +124,6 @@ body{
     top: 0;
     position: absolute;
     transition: all 0.5s;
-    height: 100px ;
 }
 .nav-menu .nav-list .nav-item a{
     font-weight: 400;
@@ -263,6 +262,7 @@ body{
     background-color: #1A153A;
     color: white !important;
 }
+
 /* Navbar end */
 
 
@@ -582,7 +582,8 @@ body{
     padding-top: 40px;
 }
 #our-team{
-    padding-bottom: 80px;
+    background-color: rgb(245, 245, 245);
+    padding-bottom: 180px;
     padding-top: 150px;
 }
 #our-team .team-header{
@@ -596,11 +597,12 @@ body{
 #our-team .team-header h2{
     color: #3B566E;
 }
-#our-team .team-card{
+
+/*#our-team .team-card{
     box-shadow: 0 2px 48px 0 rgb(0 0 0 / 8%);
     border-radius: 10px;
     overflow: hidden;
-    /* position: relative; */
+    position: relative; 
 }
 #our-team .team-card .team-information{
     text-align: center;
@@ -643,6 +645,112 @@ body{
     border-radius: 50%;
     background-color: white;
     box-shadow: 0 2px 48px 0 rgb(0 0 0 / 8%);
+} */
+
+
+#our-team .card {
+    border: none;
+    border-radius: 5px;
+    
+}
+
+#our-team .card .cardBody {
+    border-radius: 5px;
+}
+
+#our-team .card .cardBody .card-head-text {
+    background: none;
+}
+
+
+#our-team .card .cardBody .card-head-text .item-text {
+    text-align: center;
+    font-weight: 400;
+    /* font-size: 1rem; */
+    color: white;
+    background: linear-gradient(135deg, #1A153A 0%, #565178 100%);
+    padding-top: 14px;
+    padding-bottom: 3px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    /* transition:.5s; */
+}
+
+
+#our-team .card .cardBody .card-head-text .item-text .name {
+    margin-bottom: 0;
+}
+
+#our-team .card .cardBody .card-head-text .item-text .title {
+    font-size: 12px;
+}
+
+#our-team .card .cardBody .card-head-text .icons {
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+#our-team .card .cardBody .card-head-text .icons ul {
+    display: flex;
+    padding: 0;
+}
+
+#our-team .card .cardBody .card-head-text .icons ul li {
+    list-style: none;
+    list-style: none;
+    margin-left: 7px;
+    margin-right: 7px;
+}
+
+#our-team .card .cardBody .card-head-text .icons ul li a {
+    text-decoration: none;
+    color: #1A153A;
+    transition: all .5s;
+}
+
+
+#our-team .card .cardBody .bodyText {
+    color: #6F8BA4;
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+#our-team .card .cardImage {
+    display: flex;
+    justify-content: center;
+}
+
+#our-team .card .cardImage .image {
+    margin-top: -40px;
+}
+
+#our-team .card .cardImage .image img {
+    border-radius: 50%;
+    transform: translateY(45px);
+    transition: all .5s;
+    padding: 6px;
+    background-color: white;
+}
+
+#our-team .card .cardImage .image img.active3 {
+    border-radius: 50%;
+    transform: translateY(60px);
+    transition: all .5s;
+}
+
+@media only screen and (max-width: 991px) {
+    #our-team {
+        padding-bottom: 0;
+    }
+
+    #our-team .card {
+        margin-bottom: 100px;
+    }
 }
 
 #pricing-plans .animated__delay-5{
@@ -1449,3 +1557,120 @@ footer .socials li{
         width: unset;
     }
 }
+#map{
+    background: #F7FAFD;
+    padding-top: 100px;
+    padding-bottom: 70px;
+}
+.mapcontainer{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+    border-radius: 10px;
+}
+.mapcontainer iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+
+#map .contact-information .card-info{
+    background: linear-gradient(135deg, #1A153A 0%, #565178 100%);
+    box-shadow: 0 2px 48px 0 rgb(0 0 0 / 8%);
+    color: white;
+    border-radius: 5px;
+    padding: 30px;
+    position: absolute;
+    top: -93px;
+    left: 108px;
+    right: -60px;
+    z-index: 2;
+    
+}
+#map .contact-information .information-item p.mails{
+    margin-bottom: 0;
+    padding-left: 10px;
+}
+#map .contact-information .information-item p{
+    padding-left: 10px;
+}
+#map .contact-information .icons ul{
+    display: flex;
+    list-style-type: none;
+    font-size: 25px;
+    justify-content: center;
+}
+#map .contact-information .icons ul li{
+    padding-right: 20px;
+}
+#map .contact-information .icons ul i{
+    color: white;
+}
+#getIntouch {
+    background: #F7FAFD;
+    padding-top: 100px;
+    padding-bottom: 70px;
+    font-weight: 400;
+    font-size: 16px;
+    letter-spacing: 0.88px;
+    line-height: 28px;
+    color: #6F8BA4;
+}
+#getIntouch .form-info{
+    height: 50px;
+    padding-left: 20px;
+    transition: all .4s;
+    width: 100%;
+    border: none;
+    margin-bottom: 20px;
+}
+
+#getIntouch .form-info:focus{
+    padding-left: 30px;
+}
+
+#getIntouch textarea{
+    margin-top: 20px;
+    height: 150px;
+    resize: none;
+    padding: 20px;
+    width: 100%;
+    border: none;
+    transition: 0.4s;
+}
+
+#getIntouch textarea:focus{
+    padding-left: 30px;
+    transition: 0.4s;
+}
+#getIntouch .send{
+    padding: 10px 70px;
+    background-color: #1A153A;
+    color: white;
+    font-size: 12px;
+    font-weight: 600;
+    margin-top: 20px;
+}
+@media only screen and (max-width: 375px){
+    #map .contact-information .card-info{
+        position: unset;
+    }
+}
+@media only screen and (max-width: 812px){
+    #map .contact-information .card-info{
+        position: unset;
+    }
+}
+@media only screen and (max-width: 768px){
+    #map .contact-information .card-info{
+        position: unset;
+    }
+}@media only screen and (max-width:1024px){
+    #map .contact-information .card-info{
+        position: unset;
+    }
+}
+
