--- a/Jirono/css/style.css
+++ b/Jirono/css/style.css
@@ -13,14 +13,14 @@ body{
 }
 .loader-image{
     position: fixed;
-      left: 0px;
-      top: 0px;
-      width: 100%;
-      height: 100%;
-      z-index: 9999;
-      background: url('../images/DualBall-1s-430px.gif') center no-repeat white;
-      background-size: 100px;
-      text-align: center;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('../images/DualBall-1s-430px.gif') center no-repeat white;
+    background-size: 500px;
+   
 }
 #ParallaxCounter {
     border: 0;
@@ -79,7 +79,7 @@ body{
     background-size: cover;
     background-attachment: fixed;
     text-align: center;
-    padding-top: 80px;
+    margin-top: 80px;
 }
 
 #Parallax .ParallaxContent {
@@ -117,6 +117,59 @@ body{
     font-weight: 800;
 }
  /* Navbar start */
+.nav-menu a.hamburger{
+    height: 30px;
+    width: 30px;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    display: flex;
+}
+.nav-menu .hamburgerIcon span.regular{
+    display: block;
+    color: #3B566E;
+    background-color: #3B566E;
+    font-size: 1px;
+    width: 30px;
+    height: 2px;
+    transition: background-color .3s;
+}
+.nav-menu .hamburgerIcon span.before{
+    display: block;
+    color: #3B566E;
+    background-color: #3B566E;
+    font-size: 1px;
+    width: 25px;
+    height: 2px;
+    position: absolute;
+    bottom: 3px;
+    transition: all.3s;
+}
+.nav-menu .hamburgerIcon span.after{
+    display: block;
+    color: #3B566E;
+    background-color: #3B566E;
+    font-size: 1px;
+    width: 25px;
+    height: 2px;
+    position: absolute;
+    top: 3px;
+    transition: all .3s;
+}
+.nav-menu .hamburgerIcon span.regular.active1{
+    background-color: white;
+    transition: all .3s;
+}
+.nav-menu .hamburgerIcon span.after.active1{
+    transform: rotate(-45deg);
+    top: 13px;
+    transition: all .3s;
+}
+.nav-menu .hamburgerIcon span.before.active1{
+    transform: rotate(45deg);
+    bottom: 15px;
+    transition: all .3s;
+}
 .nav-menu{
     left: 0;
     right: 0;
@@ -128,22 +181,22 @@ body{
 .nav-menu .nav-list .nav-item a{
     font-weight: 400;
 }
-.nav-menu .dropdown .dropdown-menu{
+.nav-menu .dropdown .dropdown-menu.navbarHoverBlock{
     display: block;
     opacity: 0;
     visibility: hidden;
     transform: translateY(-5%);
 }
-
-.nav-menu .dropdown:hover .dropdown-menu{
+.nav-menu .dropdown:hover .dropdown-menu.navbarHoverBlock{
     opacity: 1;
     visibility: visible;
     transform: translateY(0);
     transition: all 0.3s;
 }
-.nav-menu .dropdown .dropp-item:hover .dropdown-menu{
+.nav-menu .dropdown .dropp-item:hover .dropdown-menu.navbarHoverBlock{
     display: block;
 }
+
 .nav-menu .dropdown-menu{
     border:none;
     padding: 0;
@@ -159,62 +212,16 @@ body{
 .nav-menu .dropdown-menu a:last-child{
     border-bottom: none;
 }
-
 .nav-menu .dropdown-menu a:hover{
     border-left: 4px solid #1A153A;
     padding-left: 30px;
     transition: 0.3s;
 }
-.nav-menu-others .dropdown-menu{
-    border:none;
-    padding: 0;
-}
-.nav-menu-others .dropdown-menu a {
-   margin: 0;
-   border-bottom:1px solid #f5f5f5;
-   font-weight: 400;
-   transition: padding-left 0.3s;
-   line-height: 40px;
-   
-}
-.nav-menu-others .dropdown-menu a:last-child{
-    border-bottom: none;
+
+.nav-menu.others{
+    background-color: white !important;
 }
 
-.nav-menu-others .dropdown-menu a:hover{
-    border-left: 4px solid #1A153A;
-    padding-left: 30px;
-    transition: 0.3s;
-}
-.nav-menu-others{
-    background-color: white;
-    left: 0;
-    right: 0;
-    z-index: 999;
-    position: fixed;
-    transition: all 0.5s;
-    height: 80px ;
-    transition: all 0.5s;
-}
-.nav-menu-others .nav-list .nav-item a{
-    font-weight: 400;
-}
-.nav-menu-others .dropdown .dropdown-menu{
-    display: block;
-    opacity: 0;
-    visibility: hidden;
-    transform: translateY(-5%);
-}
- 
-.nav-menu-others .dropdown:hover .dropdown-menu{
-    opacity: 1;
-    visibility: visible;
-    transform: translateY(0);
-    transition: all 0.3s;
-}
-.nav-menu-others .dropdown .dropp-item:hover .dropdown-menu{
-    display: block;
-}
 .nav-menu .logo{
     margin-top: 3px;
     margin-right: 80px;
@@ -262,6 +269,27 @@ body{
     background-color: #1A153A;
     color: white !important;
 }
+@media only screen and (max-width: 376px){
+    .nav-list{
+        background-color: white;
+    }
+    .header-buttons{
+        display: none;
+    }
+}
+@media only screen and (max-width: 812px){
+    .nav-list{
+        background-color: white;
+    }
+    .header-buttons{
+        display: none;
+    }
+}
+@media only screen and (max-width: 768px){
+    .nav-list{
+        background-color: white;
+    }
+}
 
 /* Navbar end */
 
@@ -302,50 +330,72 @@ body{
 #welcome .caption a:hover{
     background-color:  #100b2c;
 }
-#welcome .welcome-grid{
+.parent {
     display: grid;
-    margin-left: 100px;
-    grid-template-areas:
-    'item1 item2'
-    'item1 item4'
-    'item3 item4'
-}
-.item1{
-    grid-area: item1;
-}
-.item2{
-    grid-area: item2;
-}
-.item3{
-    grid-area: item3;
-}
-.item4{
-    grid-area: item4;
-}
-#welcome .welcome-grid .item{
-    margin: 3px;
-    border-radius: 5px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr 0.25fr 1fr;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    }
+    
+    .div1 { grid-area: 1 / 1 / 3 / 2; }
+    .div2 { grid-area: 1 / 2 / 2 / 3; }
+    .div3 { grid-area: 3 / 1 / 4 / 2; }
+    .div4 { grid-area: 2 / 2 / 4 / 3; }
+
+    .div1{
+        width: 264px;
+        height: 300px;
+    }
+    .div2{
+        width: 264px;
+        height: 230px;
+    }
+    .div3{
+        width: 264px;
+        height: 200px;
+        position: relative;
+    }
+    .div4{
+        width: 264px;
+        height: 270px;
+        position: relative;
+    }
+.div1 .image{
+    width: 100%;
+    height: 300px;
     overflow: hidden;
 }
-#welcome .welcome-grid .item .image img:hover{
-    transform: scale(1.1);
-    transition: 0.5s;
-}
-#welcome .welcome-grid .image{
-    height: 100%;
-    position: relative;
-    width: 265px;
-}
-#welcome .welcome-grid .image img{
+.div1 .image img{
     width: 100%;
-    height: 100%;
+    height: 300px;
     object-fit: cover;
-    transition: 0.5s;
+    border-radius: 7px;
 }
-#welcome .welcome-grid .item3{
-    position: relative;
+.div2 .image{
+    width: 100%;
+    height: 230px;
+    overflow: hidden;
 }
-#welcome .welcome-grid .item3 .item3-icon{
+.div2 .image img{
+    width: 100%;
+    height: 230px;
+    object-fit: cover;
+    border-radius: 7px;
+}
+.div3 .image{
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+    
+}
+.div3 .image img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 7px;
+}
+.parent .div3 .div3-icon{
     position: absolute;
     top: 25%;
     left: 40%;
@@ -356,17 +406,26 @@ body{
     background: #ffffff2e;
     cursor: pointer;
 }
-#welcome .welcome-grid .item3 .item3-icon i{
+.div3-icon i{
     position: absolute;
     font-size: 25px;
     color: white;
     left: 35%;
     top: 30%;  
 }
-#welcome .welcome-grid .item4 .image{
-    position: relative;
+.div4 .image{
+    width: 100%;
+    height: 270px;
+    overflow: hidden;
 }
-#welcome .welcome-grid  .item4 .image .content{
+.div4 .image img{
+    width: 100%;
+    height: 270px;
+    object-fit: cover;
+    border-radius: 7px;
+    transition: transform 0.3s;
+}
+.div4 .image .content{
     position: absolute;
     top: 0;
     left: 0;
@@ -377,15 +436,92 @@ body{
     color: white;
     line-height: 30px;
     font-size: 20px;
-}
-#welcome .welcome-grid  .item4 .image .content{
     padding-top: 60px;
     padding-left: 10px;
     padding-right: 10px;
     z-index: 5;
 }
-#welcome .welcome-grid  .item4 .image .content:hover +img{
+.parent .image img{
+    transition: 0.3s;
+}
+.parent .image:hover img{
+    transform: scale(1.1);
+    
+}
+#welcome .parent  .div4 .image .content:hover +img{
     transform: scale(1.1)
+}
+@media only screen and (min-width: 374px) and (max-width: 376px){
+    .div1{
+        width: 166px !important;
+       
+    }
+    .div2{
+        width: 166px !important;
+      
+    }
+    .div3{
+        width: 166px !important;
+      
+    }
+    .div4{
+        width: 166px !important;
+       
+    }
+}
+@media only screen and (min-width: 811px) and (max-width: 813px) {
+    .div1{
+        width: 343px;
+       
+    }
+    .div2{
+        width: 343px;
+      
+    }
+    .div3{
+        width: 343px;
+      
+    }
+    .div4{
+        width: 343px;
+       
+    }
+}
+ @media only screen and (min-width: 766px) and (max-width: 769px){
+    .div1{
+        width: 343px;
+       
+    }
+    .div2{
+        width: 343px;
+      
+    }
+    .div3{
+        width: 343px;
+      
+    }
+    .div4{
+        width: 343px;
+       
+    }
+ }
+@media only screen and (min-width: 1022px) and (max-width: 1025px){
+    .div1{
+        width: 219px;
+       
+    }
+    .div2{
+        width: 219px;
+      
+    }
+    .div3{
+        width: 219px;
+      
+    }
+    .div4{
+        width: 219px;
+       
+    }
 }
 .same .card{
     position: relative;
@@ -597,56 +733,6 @@ body{
 #our-team .team-header h2{
     color: #3B566E;
 }
-
-/*#our-team .team-card{
-    box-shadow: 0 2px 48px 0 rgb(0 0 0 / 8%);
-    border-radius: 10px;
-    overflow: hidden;
-    position: relative; 
-}
-#our-team .team-card .team-information{
-    text-align: center;
-    background: linear-gradient(135deg, #1A153A 0%, #565178 100%);
-    color: white;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-size: 12px;
-}
-#our-team .team-card .team-information h5{
-   font-weight: 800;
-   font-size: 16px;
-   margin-bottom: 0;
-}
-#our-team .team-card p{
-    text-align: center;
-    padding-top: 20px;
-}
-#our-team .team-card .team-social{
-    text-align: center;
-    list-style-type: none;
-    padding-top: 20px;
-}
-#our-team .team-card .team-social li{
-    display: inline-block;
-    padding-right: 20px;
-}
-#our-team .team-item .team-image {
-    height: 50px;
-    background-color: white;
-}
-#our-team .team-item .team-image .image{
-       position: absolute;
-       bottom: -40px;
-       left: 10px;
-}
-#our-team .team-item .team-image .image img{
-    padding: 6px;
-    margin-left: 80px;
-    border-radius: 50%;
-    background-color: white;
-    box-shadow: 0 2px 48px 0 rgb(0 0 0 / 8%);
-} */
-
 
 #our-team .card {
     border: none;
@@ -963,14 +1049,7 @@ footer .socials li{
     #welcome  .card{
       margin-bottom: 30px;
     }
-   #welcome .welcome-grid {
-        margin-left: 0px;   /*not working*/
-    }
-    #welcome .item4 .content p {
-        font-size: 13px;
-        text-align: left;
-        padding-right: 14px;
-    }
+   
     .same .card .features-icon{
         left: 130px;  
         top: 15px;
@@ -978,16 +1057,7 @@ footer .socials li{
     #design .design-caption h2{
         padding-top: 30px;
     }
-    #our-team .team-item .team-image .image{
-        left:50px;       /*not working*/
-    }
-    #our-team .team-item{
-        margin-bottom: 60px;
-    }
-    #our-team .team-item .team-image .image{
-        bottom: 20px;
-        left:50px;
-    }
+   
     
 }
 @media only screen and (max-width:812px) {
@@ -1014,10 +1084,7 @@ footer .socials li{
         left: 130px;
         top: 15px ;
     }
-    #our-team .team-item .team-image .image{
-        /* bottom: 0px !important; */
-        left: 150px ;
-    }
+   
     
 }
 @media only screen and (max-width : 1024px){
@@ -1028,9 +1095,7 @@ footer .socials li{
         bottom: 0px !important;
         left:0px !important;
     }
-    #our-team .team-item{
-        margin-bottom: 60px;
-    }
+   
     
 
 }
@@ -1248,10 +1313,57 @@ footer .socials li{
     display: none;
 }
 #accordion{
-    margin-top: 20px !important;
+    background: #FFFFFF;
+    box-shadow: 0 2px 48px 0 rgb(0 0 0 / 8%);
+    border-radius: 4px;  
 }
+#accordion .card{
+    border: none;
+    background: none;
+    border-bottom: 1px solid #F7F6FF;
+  
+    
+}
+#accordion .card .card-header{
+    padding: 0;
+    
+}
+#accordion .card .card-header h5{
+    font-weight: 400;
+    font-size: 15px;
+    letter-spacing: 1px;
+    color: #3B566E;
+    transition: 0.3s;
+    
+    margin-bottom: 0;
+}
+#accordion .card .card-header .title{
+    padding: 20px 30px;
+}
+#accordion .card .card-header:hover .title{
+    background-color: #CCDCEA;
+}
+#accordion .card .card-header:hover h5{
+    padding-left: 15px;
 
-
+    
+}
+#accordion .card .card-body.open{
+    display: block;
+}
+#accordion .card .card-body{
+    font-weight: 400;
+    font-size: 14px;
+    color: #6F8BA4;
+    line-height: 28px;
+    letter-spacing: 0.8px;
+    padding: 30px;
+}
+@media only screen and (max-width: 376px){
+    #accordion{
+        margin-top: 20px;
+    }
+}
 #blog{
     background-color: #F7FAFD;
     padding: 100px 0px;
